后台引用模版修改

--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://www.yunzhiclub.com">梦云智CMS</a>
+        <a class="navbar-brand" href="http://www.yunzhiclub.com">thinkphp5.0CMS</a>
     </div>
     <!-- /.navbar-header -->
     <ul class="nav navbar-top-links navbar-right">
