--- a/application/home/view/index.html
+++ b/application/home/view/index.html
@@ -2,20 +2,18 @@
 <html>
 
 <head>
-    <include file="Base/head" />
+    {include file="Base/head" /}
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-                <include file="Base/header" />
-                <include file="Base/body" />
-                <include file="Base/footer" />
+                {include file="Base/header" /}
+                {include file="Base/body" /}
+                {include file="footer" /}
             </div>
         </div>
     </div>
     <script src="__JS__/bootstrap.min.js"></script>
 </body>
-
-</html>
