--- a/application/home/view/template/nav.html
+++ b/application/home/view/template/nav.html
@@ -14,46 +14,46 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="{:U('Template/index')}"><i class="fa fa-dashboard fa-fw"></i> 首页</a>
+                            <a href="{:U('template/index')}"><i class="fa fa-dashboard fa-fw"></i> 首页</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="{:U('Template/flot')}">Flot Charts</a>
+                                    <a href="{:U('template/flot')}">Flot Charts</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/morris')}">Morris.js Charts</a>
+                                    <a href="{:U('template/morris')}">Morris.js Charts</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="{:U('Template/tables')}"><i class="fa fa-table fa-fw"></i> Tables</a>
+                            <a href="{:U('template/tables')}"><i class="fa fa-table fa-fw"></i> Tables</a>
                         </li>
                         <li>
-                            <a href="{:U('Template/forms')}"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                            <a href="{:U('template/forms')}"><i class="fa fa-edit fa-fw"></i> Forms</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="{:U('Template/panels')}">Panels and Wells</a>
+                                    <a href="{:U('template/panels')}">Panels and Wells</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/buttons')}">Buttons</a>
+                                    <a href="{:U('template/buttons')}">Buttons</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/notifications')}">Notifications</a>
+                                    <a href="{:U('template/notifications')}">Notifications</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/typography')}">Typography</a>
+                                    <a href="{:U('template/typography')}">Typography</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/icons')}"> Icons</a>
+                                    <a href="{:U('template/icons')}"> Icons</a>
                                 </li>
                                 <li>
-                                    <a href="{:U('Template/grid')}">Grid</a>
+                                    <a href="{:U('template/grid')}">Grid</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
