修改前台模版

--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -1,4 +1,161 @@
 {extend name="index" /}
 {block name="content"}
+<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
 
+<!--=======content================================-->
+<div id="content"><div class="ic">More Website Templates @ TemplateMonster.com - July 22, 2013!</div>
+    <div class="slider-relative">
+        <div class="slider-block">
+            <div class="slider">
+                <ul class="items">
+                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt="">
+                        <div class="banner">Our Customers are Our Priority</div>
+                    </li>
+                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt="">
+                        <div class="banner">Creative Problem-Solving</div>
+                    </li>
+                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt="">
+                        <div class="banner">Imagination is Our Power</div>
+                    </li>
+                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt="">
+                        <div class="banner">The World of Opportunities</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container_12">
+        <div class="grid_3 box-1">
+            <div class="wrap">
+                <img src="/thinkphp_5.0CMS/public/index/images/page1-img1.png" alt="">
+                <h4>Standards</h4>
+            </div>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui bl abd gdihtii praesentium voluptatum deenir rf uiti jll atque. Corrupti quos doloregts.
+        </div>
+        <div class="grid_3 box-1">
+            <div class="wrap">
+                <img src="/thinkphp_5.0CMS/public/index/images/page1-img2.png" alt="">
+                <h4>Principles</h4>
+            </div>
+            Gthoie eos et accusamus et iusto odio dignissimos ducimus qui bl abd gdihtii praesentium voluptatum deenir rf uiti jll atque. Mjhof sdaw doloregts.
+        </div>
+        <div class="grid_3 box-1">
+            <div class="wrap">
+                <img src="/thinkphp_5.0CMS/public/index/images/page1-img3.png" alt="">
+                <h4>Experience</h4>
+            </div>
+            Loas jift accusamus et iusto odio dniloit
+ssimos ducimus qui bl abd gdihtiijolwer praesentium voluptatum deenir rf uiti jlol atque. Gfasdh quos doloregts.
+        </div>
+        <div class="grid_3 box-1">
+            <div class="wrap">
+                <img src="/thinkphp_5.0CMS/public/index/images/page1-img4.png" alt="">
+                <h4>Client Reviews</h4>
+            </div>
+            Owasd et accusamus et iusto odiomulo dignissimos ducimus qui bl abd gdihtiie praesentium voluptatum deenir rf uiti jllti atque. Ckloerupti quos doloregts.
+        </div>
+        <div class="clear"></div>
+    </div>
+    <div class="bg-1">
+        <div class="container_12">
+            <div class="grid_12">
+                <div class="carousel">
+                    <a href="#" class="prev1"></a><a href="#" class="next1"></a>
+                    <div class="carousel_div">
+                        <ul class="carousel1">
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img5.jpg" alt="">
+                            <h4>Business AnalYtics</h4>
+                            At vero eos et accusamus et iusto odioll dignissimos ducimus qui bl abd gdihtiiti praesentium voluptatum deenir rf uiti jlle atque. Corrupti quos doloregts et quaso molestias excepturi sint  hip occaecatiw. At vero eos et  hhj  jk kjusamutrelomiker
+    oluty gtrew lokiju qwertynomi. <br>
+                            <a href="#" class="btn">more</a>           
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img6.jpg" alt="">
+                            <h4>Growth Strategies</h4>
+                            Aolity vero eos et accusamus et iustokill odio dignissimos ducimus qui bl abduyl gdihtii praesentium voluptatum deenir rfi uiti jll atque. Dertorrupti quos doloregtse et quas molestias excepturi sint  hipterq occaecati. Ot vero eos et  hhj  jklomi poli kjusamu s et iusto odio dignissm.           <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img7.jpg" alt="">
+                            <h4>Smarter CommErce</h4>
+                            Tro eos et accusamus et iusto odioyrew dignissimos ducimus qui bl abd gdihtiitt praesentium voluptatum deenir rf uiti jlle atque. Holrrupti quos doloregts et quasi molestias excepturi sint  hip occaecatill. Ght vero eos et  hhj  jk kjusamuremmo li                              s et iusto odio dignissms ucimus.         <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img8.jpg" alt="">
+                            <h4>Market Research</h4>
+                            Hfvero eos et accusamus et iusto odiotri dignissimos ducimus qui bl abd gdihtiin praesentium voluptatum deenir rf uiti jllo atque. Dorrupti quos doloregts et quase molestias excepturi sint  hip occaecatib. Rt vero eos et  rewlo jk kjusamu wertilo masdes et iusto odio asgnissme.          <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img5.jpg" alt="">
+                            <h4>Business AnalYtics</h4>
+                            At vero eos et accusamus et iusto odioll dignissimos ducimus qui bl abd gdihtiiti praesentium voluptatum deenir rf uiti jlle atque. Corrupti quos doloregts et quaso molestias excepturi sint  hip occaecatiw. At vero eos et  hhj  jk kjusamutrelomiker
+    oluty gtrew lokiju qwertynomi. <br>
+                            <a href="#" class="btn">more</a>           
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img6.jpg" alt="">
+                            <h4>Growth Strategies</h4>
+                            Aolity vero eos et accusamus et iustokill odio dignissimos ducimus qui bl abduyl gdihtii praesentium voluptatum deenir rfi uiti jll atque. Dertorrupti quos doloregtse et quas molestias excepturi sint  hipterq occaecati. Ot vero eos et  hhj  jklomi poli kjusamu s et iusto odio dignissm.           <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                          <li class="grid_3">
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img7.jpg" alt="">
+                            <h4>Smarter CommErce</h4>
+                            Tro eos et accusamus et iusto odioyrew dignissimos ducimus qui bl abd gdihtiitt praesentium voluptatum deenir rf uiti jlle atque. Holrrupti quos doloregts et quasi molestias excepturi sint  hip occaecatill. Ght vero eos et  hhj  jk kjusamuremmo li                              s et iusto odio dignissms ucimus.         <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                          <li>
+                            <img src="/thinkphp_5.0CMS/public/index/images/page1-img8.jpg" alt="">
+                            <h4>Market Research</h4>
+                            Hfvero eos et accusamus et iusto odiotri dignissimos ducimus qui bl abd gdihtiin praesentium voluptatum deenir rf uiti jllo atque. Dorrupti quos doloregts et quase molestias excepturi sint  hip occaecatib. Rt vero eos et  rewlo jk kjusamu wertilo masdes et iusto odio asgnissme.          <br>
+                            <a href="#" class="btn">more</a>    
+                          </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    <div class="bg-2">
+        <div class="container_12">
+            <div class="grid_7">
+                <div class="border-1">
+                    <h2 class="indent-1">About Us</h2>
+                    <div class="wrap box-2">
+                        <img src="/thinkphp_5.0CMS/public/index/images/page1-img9.jpg" alt="">
+                        <p class="text-info"><a href="http://www.cssmoban.com/" target="_blank">Click here</a> for more info about this free website template created by TemplateMonster.com </p>
+                        <p>Lorem ipsum dolor sit amet consec tetuer adiping elit. Praesent vestibulum molestie lacus. Aenegan nonummy hendrerit mauris. Phasellus portafgtthh Fusce suscipit varius mium sociisileli.</p>
+                        Lorem ipsum dolor sit amet, consec tetuer adipiscing elit. Praesent vestibulum molestiealld je lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cumtyle sociis natoque penatibus et  montes nascetur ridiculus mus. Nulla dui. Fusce feue suadatroli odio. Morbi nunc odio, gravida at, cursusnec luctus a lorem. Maecenas tristique orci semertyle. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donecorem ipmolotyweqop
+    dolor sit amet  Lorem ipsum dolor sit amet, consec. Fusce suscipit vam.<br>
+                        <a href="#" class="btn">more</a>                   
+                    </div>
+                </div>
+            </div>
+            <div class="grid_5">
+                <h2 class="indent-1">Latest News</h2>
+                <ul class="list-news">
+                    <li>
+                        <div class="wrap">
+                            <div class="badge">27<span>APR</span></div>
+                            <span class="text-info">Duis posuere consectetur pellentesqe;</span><br>
+                            <a href="#">April 27.03.12</a>
+                        </div>
+                        Sed nisi turpis pellentesque at ultrices in dapibus in magnatr. Nunc easi diam risus placerat ut scelerisque et suscipit euter ante. Nullam vitae dolor ullcper felises cursus gravida.                
+                    </li>
+                    <li>
+                        <div class="wrap">
+                            <div class="badge">29<span>APR</span></div>
+                            <span class="text-info">Asuis kosuer fronsectetuo ellentesqi;</span><br>
+                            <a href="#">April 29.03.12</a>
+                        </div>
+                        Hoed nisi turpis, pellentesque at ultrices idapibus in magnawe. Lunc easi diam risus, placerat ut scelerisque esuscipit eu ante. Kiullam vitae dolor ullcper felises cursus gravidew.              
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>           
+</div>
 {/block}
