--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -1,13 +1,13 @@
 <footer>
     <div class="container_12">
         <div class="grid_8">
-            <span>BiZZ &copy; 2016 | Privacy Policy | Website designed Collect from  <a href="http://www.cssmoban.com/" rel="" target="_blank">模板之家</a></span>
+            <span>BiZZ &copy; 2016 | Privacy Policy | Website designed Collect from  <a href="http://www.cssmoban.com/" rel="" target="_blank">梦云智</a></span>
         </div>
         <div class="grid_4">
             <ul class="soc-icon">
-                <li><a href="#"><img src="images/icon-3.png" alt=""></a></li>
-                <li><a href="#"><img src="images/icon-2.png" alt=""></a></li>
-                <li><a href="#"><img src="images/icon-1.png" alt=""></a></li>
+                <li><a href="#"><img src="/thinkphp_5.0CMS/public/index/images/icon-3.png" alt=""></a></li>
+                <li><a href="#"><img src="/thinkphp_5.0CMS/public/index/images/icon-2.png" alt=""></a></li>
+                <li><a href="#"><img src="/thinkphp_5.0CMS/public/index/images/icon-1.png" alt=""></a></li>
             </ul>
         </div>
     </div>
