--- a/application/index/view/index.html
+++ b/application/index/view/index.html
@@ -2,25 +2,16 @@
 <html>
 
 <head>
-    {include file="Base/head" /}
+    {include file="head" /}
 </head>
 
 <body>
-    {block name="wrapper"}
-        <div id="wrapper">
-        
-            {include file="Base/body" /}
-            <div id="footer" style="clear:both;display:block">
-                {block name="footer"}
-                    <p>
-                        <span style="text-align:left;float:left">&copy;<?php echo date("Y"); ?> <a href="http://www.mengyunzhi.com" alt="www.mengyunzhi.club">梦云智</a></span>
-                    </p>
-                {/block}
-            </div>
-        </div>
-        <!--/#wrapper-->
-        {include file="Base/footer" /}
+    <header>
+        {include file="nav" /}
+    </header>
+    {block name="content"}
     {/block}
+        {include file="footer" /}
 </body>
 
 </html>
