--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -1,6 +1,6 @@
     <div class="container_12">
         <div class="grid_12">
-           <h1><a href="index.html"><img src="images/logo.png" alt="BIZZ"></a></h1>
+           <h1><a href="index.html"><img src="/thinkphp_5.0CMS/public/index/images/logo.png" alt="BIZZ"></a></h1>
       </div>
     </div>
     <nav>
