--- a/application/home/view/nav.html
+++ b/application/home/view/nav.html
@@ -21,7 +21,7 @@
                 <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                 </li>
                 <li class="divider"></li> -->
-                <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                <li><a href="{:url('login/index')}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                 </li>
             </ul>
             <!-- /.dropdown-user -->
@@ -36,17 +36,17 @@
                     <a href="{:url('Index/index')}"><i class="fa fa-dashboard fa-fw"></i> 首页</a>
                 </li>
                 <li>
-                    <a href="{:url('Index/user')}"><i class="fa fa-group"></i> 用户管理</span></a>
+                    <a href="{:url('Usermanage/index')}"><i class="fa fa-group"></i> 用户管理</span></a>
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="{:url('Index/user')}"><i class="fa fa-table fa-fw"></i> 类别管理</a>
+                    <a href="{:url('Usermanage/index')}"><i class="fa fa-table fa-fw"></i> 类别管理</a>
                 </li>
                 <li>
                     <a href="{:url('Index/user')}"><i class="fa fa-edit fa-fw"></i> 文章管理</a>
                 </li>
                 <li>
-                    <a href="{:url('Index/user')}"><i class="glyphicon glyphicon-user"></i> 个人中心</span></a>
+                    <a href="{:url('personal/index')}"><i class="glyphicon glyphicon-user"></i> 个人中心</span></a>
                 </li>
                 <li>
                     <a href="{:url('Index/user')}"><i class="fa fa-wrench fa-fw"></i> 系统设置</span></a>
