--- a/application/home/view/personal/index.html
+++ b/application/home/view/personal/index.html
@@ -7,6 +7,12 @@
         <div class="col-md-7">
             <form class="form-horizontal" action="{:url('edit')}" method="post">
                 <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
