--- a/application/home/view/nav.html
+++ b/application/home/view/nav.html
@@ -53,7 +53,7 @@
 
                 </li>
                 <li>
-                    <a href="{:url('Index/user')}"><i class="fa fa-files-o fa-fw"></i> 菜单管理</span></a>
+                    <a href="{:url('Menu/index')}"><i class="fa fa-files-o fa-fw"></i> 菜单管理</span></a>
                 </li>
             </ul>
         </div>
