--- a/application/home/view/menu/edit.html
+++ b/application/home/view/menu/edit.html
@@ -4,11 +4,35 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('update')}" method="post">
+            <form class="form-horizontal" action="{:url('insert')}" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="名称">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">模块名</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="模块名">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">控制器名</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="控制器名">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">方法名</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="方法名">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">权重</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="权重">
                     </div>
                 </div>
                 <div class="form-group">
@@ -27,8 +51,8 @@
                     <div class="col-sm-10">
                         <select class="form-control">
                             <foreach name="" item="module">
-                                <option value="">启用</option>
-                                <option value="">禁用</option>
+                                <option value="">显示</option>
+                                <option value="">不显示</option>
                             </foreach>
                         </select>
                     </div>
