--- a/application/home/view/Category/index.html
+++ b/application/home/view/Category/index.html
@@ -1,49 +1,58 @@
 {extend name="index" /}
     {block name="body"}
         <div class="container">
-        	<div class="row">
-        		<div class="col-md-4 col-md-offset-1">
-        			<form method="get" action="{:url('', input('get.'))}" class="form-inline">
-        				<input type="text" name="name" placeholder="类别名..." value="{:input('get.name')}" class="form-control">
-        				<button type="submit" class="btn btn-default">
-                            <i class="glyphicon glyphicon-search"></i>&nbsp;查询
-                        </button>
-        			</form>
-        		</div>
-                <div class="col-md-2 col-md-offset-3 text-right">
-                    <a href="{:url('add')}" class="btn btn-primary">
-                        <i class="glyphicon glyphicon-plus">增加</i>
-                    </a>
+        <div class="row">
+            <div class="col-md-12">
+                
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-10">
+                        <div class="row">
+                            <div class="col-md-10">
+                                <form class="form-inline" action="{:url('',input('get.'))}">
+                                    <div class="form-group">
+                                        <label class="sr-only" for="name"></label>
+                                        <input name="name" type="text" class="form-control" placeholder="类别名..." value="{:input('get.name')}">
+                                        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i>&nbsp;查询</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-2"><a href="{:url('add')}" class="btn btn-primary" style="margin-left: 60px;
+"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-1">
+                    </div>
                 </div>
-        	</div>
-            <div class="row" style="margin-top:20px">
-                <table class="table table-bordered table table-hover col-md-offset-1">
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <table class="table table-bordered table table-hover">
                     <tr class="info">
                         <th>类别名</th>
                         <th>操作</th>
                     </tr>
                     <tr>
                         <td>新闻类</td>
-                        <td>
-                            <a href="{:url('edit')}">编辑</a>
-                            <a href="#">删除</a>
-                        </td>
+                        <td><a href="{:url('delete', 'id=')}">删除</a>
+                            <a href="{:url('edit', 'id=')}">编辑</a></td>
                     </tr>
                     <tr>
                         <td>产品类</td>
-                        <td>
-                            <a href="{:url('edit')}">编辑</a>
-                            <a href="#">删除</a>
-                        </td>
+                        <td><a href="{:url('delete', 'id=')}">删除</a>
+                            <a href="{:url('edit', 'id=')}">编辑</a></td>
                     </tr>
                     <tr>
                         <td>关于我们</td>
-                        <td>
-                            <a href="{:url('edit')}">编辑</a>
-                            <a href="#">删除</a>
-                        </td>
+                        <td><a href="{:url('delete', 'id=')}">删除</a>
+                            <a href="{:url('edit', 'id=')}">编辑</a></td>
                     </tr>
                 </table>
             </div>
+            <div class="col-md-1"></div>
         </div>
+    </div>
     {/block}
