--- a/application/home/view/usermanage/index.html
+++ b/application/home/view/usermanage/index.html
@@ -43,32 +43,32 @@
                         <td><a href="{:url('detail', 'id=')}">小明</a></td>
                         <td>用户</td>
                         <td><a href="{:url('state', 'id=')}">解冻</a></td>
-                        <td><a href="{:url('delete', 'id=')}">删除</a>
-                            <a href="{:url('edit', 'id=')}">编辑</a></td>
+                        <td><a href="{:url('delete', 'id=')}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
+                            <a href="{:url('edit', 'id=')}" class="btn btn-md btn-primary"><i class="fa fa-pencil"></i>编辑</a></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td><a href="{:url('detail', 'id=')}">小李</a></td>
                         <td>管理员</td>
                         <td><a href="{:url('state', 'id=')}">冻结</a></td>
-                        <td><a href="{:url('delete', 'id=')}">删除</a>
-                            <a href="{:url('edit', 'id=')}">编辑</a></td>
+                        <td><a href="{:url('delete', 'id=')}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
+                            <a href="{:url('edit', 'id=')}" class="btn btn-md btn-primary"><i class="fa fa-pencil"></i>编辑</a></td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td><a href="{:url('detail', 'id=')}">张三</a></td>
                         <td>用户</td>
                         <td><a href="{:url('state', 'id=')}">冻结</a></td>
-                        <td><a href="{:url('delete', 'id=')}">删除</a>
-                            <a href="{:url('edit', 'id=')}">编辑</a></td>
+                        <td><a href="{:url('delete', 'id=')}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
+                            <a href="{:url('edit', 'id=')}" class="btn btn-md btn-primary"><i class="fa fa-pencil"></i>编辑</a></td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td><a href="{:url('detail', 'id=')}">四毛</a></td>
                         <td>管理员</td>
                         <td><a href="{:url('state', 'id=')}">冻结</a></td>
-                        <td><a href="{:url('delete', 'id=')}">删除</a>
-                            <a href="{:url('edit', 'id=')}">编辑</a></td>
+                        <td><a href="{:url('delete', 'id=')}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
+                            <a href="{:url('edit', 'id=')}" class="btn btn-md btn-primary"><i class="fa fa-pencil"></i>编辑</a></td>
                     </tr>
                 </table>
             </div>
