完善类别管理

--- a/application/home/view/Category/index.html
+++ b/application/home/view/Category/index.html
@@ -17,7 +17,7 @@
                                     </div>
                                 </form>
                             </div>
-                            <div class="col-md-2"><a href="{:url('add')}" class="btn btn-primary" style="margin-left: 60px;
+                            <div class="col-md-2"><a href="{:url('edit')}" class="btn btn-primary" style="margin-left: 60px;
 "><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a></div>
                         </div>
                     </div>
