--- a/application/home/view/nav.html
+++ b/application/home/view/nav.html
@@ -40,7 +40,7 @@
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="{:url('Usermanage/index')}"><i class="fa fa-table fa-fw"></i> 类别管理</a>
+                    <a href="{:url('Category/index')}"><i class="fa fa-table fa-fw"></i> 类别管理</a>
                 </li>
                 <li>
                     <a href="{:url('Index/user')}"><i class="fa fa-edit fa-fw"></i> 文章管理</a>
