--- a/application/home/view/usermanage/add.html
+++ b/application/home/view/usermanage/add.html
@@ -6,25 +6,25 @@
         <div class="col-md-7">
             <form class="form-horizontal" action="{:url('insert')}" method="post">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Sex</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">性别</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="Sex">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                    <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;add</button>
+                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;保存</button>
                     </div>
                 </div>
             </form>
