--- a/application/home/view/nav.html
+++ b/application/home/view/nav.html
@@ -49,7 +49,7 @@
                     <a href="{:url('personal/index')}"><i class="glyphicon glyphicon-user"></i> 个人中心</span></a>
                 </li>
                 <li>
-                    <a href="{:url('Index/user')}"><i class="fa fa-wrench fa-fw"></i> 系统设置</span></a>
+                    <a href="{:url('Systemset/index')}"><i class="fa fa-wrench fa-fw"></i> 系统设置</span></a>
 
                 </li>
                 <li>
