--- a/application/home/view/Article/index.html
+++ b/application/home/view/Article/index.html
@@ -19,7 +19,7 @@
                     <div class="col-md-2">
                     </div>
                     <div class="col-md-2 col-md-offset-5">
-                        <div class="col-md-2"><a href="{:url('Menu/add')}" class="btn btn-primary" style="margin-left: 40px;
+                        <div class="col-md-2"><a href="{:url('Article/edit')}" class="btn btn-primary" style="margin-left: 40px;
 "><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a></div>
                     </div>
                 </div>
@@ -34,50 +34,40 @@
                         <thead>
                             <tr class="info">
                                 <th>序号</th>
-                                <th>名称</th>
-                                <th>权重</th>
-                                <th>状态</th>
+                                <th>标题</th>
+                                <th>类别</th>
+                                <th>推荐</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>首页</td>
-                                <td>1</td>
-                                <td>显示</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
                              <tr>
-                                <td>2</td>
+                                <td>1</td>
+                                <td>企鹅回来了</td>
                                 <td>新闻通知</td>
+                                <td>是</td>
+                                <td>
+                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
+                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td>2</td>
-                                <td>不显示</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
+                                <td>南极大陆</td>
                                 <td>产品列表</td>
-                                <td>3</td>
-                                <td>显示</td>
+                                <td>否</td>
                                 <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
+                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
                                     <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
                                 </td>
                             </tr>
                             <tr>
-                                <td>4</td>
-                                <td>关于我们</td>
                                 <td>3</td>
-                                <td>不显示</td>
+                                <td>厉害啊</td>
+                                <td>关于我们</td>
+                                <td>是</td>
                                 <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
+                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
                                     <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
                                 </td>
                             </tr>
