--- a/application/home/view/menu/edit.html
+++ b/application/home/view/menu/edit.html
@@ -1,4 +1,5 @@
-{extend name="index" /} {block name="body"}
+{extend name="index" /}
+{block name="body"}
 <div class="container">
     <div class="row">
         <div class="col-md-1">
@@ -47,8 +48,19 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">权限</label>
+                    <div class="col-sm-10">
+                        <select class="form-control">
+                            <foreach name="" item="module">
+                                <option value="">所有用户</option>
+                                <option value="">注册用户</option>
+                            </foreach>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button type="submit" class="btn btn-primary">保存</button>
                     </div>
                 </div>
             </form>
