--- a/application/home/view/systemset/index.html
+++ b/application/home/view/systemset/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-ok"></i>&nbsp;save</button>
+                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-ok"></i>&nbsp;保存</button>
                     </div>
                 </div>
             </form>
