--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -10,7 +10,7 @@
                     <li class="current"><a href="{:url('Index/index')}">首页</a></li>
                     <li><a href="{:url('Index/index')}">新闻通知</a></li>
                     <li><a href="{:url('Index/index')}">产品列表</a></li>
-                    <li><a href="{:url('Index/index')}">关于我们</a></li>
+                    <li><a href="{:url('Aboutus/index')}">关于我们</a></li>
                 </ul>
                 <div class="clear"></div>
             </div>
