--- a/application/index/view/Aboutus/index.html
+++ b/application/index/view/Aboutus/index.html
@@ -3,7 +3,7 @@
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
 
 <!--=======content================================-->
-<div class="container">
+<div class="container" style="background-color:white;">
 	<div class="slider-relative">
         <div class="slider-block">
             <div class="slider" style="position:absolute">
@@ -22,6 +22,7 @@
 		<p style="text-indent:25px;">
 			雨是最寻常的，一下就是三两天。可别恼。看，像牛牦，像花针，像细丝，密密的斜织着，人家屋顶上全笼着一层薄烟。树叶却绿得发亮，小草也青得逼你的眼。傍晚时候，上灯了，一点点黄晕的光，烘托出一片安静而和平的夜。在乡下，小路上，石桥边，有撑着伞慢慢走着的人，地里还有工作的农民，披着所戴着笠。他们的房屋稀稀疏疏的，在雨里静默着。
 		</p>
+		<br />
 	</div>
 </div>
 {/block}
