--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -7,16 +7,16 @@
         <div class="slider-block">
             <div class="slider">
                 <ul class="items">
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt="">
+                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt=""></a>
                         <div class="banner">Our Customers are Our Priority</div>
                     </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt="">
+                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt=""></a>
                         <div class="banner">Creative Problem-Solving</div>
                     </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt="">
-                        <div class="banner">Imagination is Our Power</div>
+                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt=""></a>
+                        <div class="bannesr">Imagination is Our Power</div>
                     </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt="">
+                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt=""></a>
                         <div class="banner">The World of Opportunities</div>
                     </li>
                 </ul>
