--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -2,27 +2,6 @@
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">Website Template</a></div>
 <!--=======content================================-->
 <div id="content">
-    <div class="ic">More Website Templates @ TemplateMonster.com - July 22, 2013!</div>
-    <div class="slider-relative">
-        <div class="slider-block">
-            <div class="slider">
-                <ul class="items">
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt="">
-                        <div class="banner">Our Customers are Our Priority</div>
-                    </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt="">
-                        <div class="banner">Creative Problem-Solving</div>
-                    </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt="">
-                        <div class="banner">Imagination is Our Power</div>
-                    </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt="">
-                        <div class="banner">The World of Opportunities</div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <div class="bg-2">
         <div class="container_12">
             <div class="grid_6">
@@ -49,29 +28,24 @@
                 </div>
             </div>
             <div class="grid_6">
-                <h2 class="indent-1">新闻</h2>
-                <ul>
-                    <li>
-                        <a href="{:url('detail')}" title="我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳绩" target="_blank">我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳…</a>
-                        <span>[2016-08-15]</span>
-                    </li>
-                    <li>
-                        <a href="{:url('detail')}" title="河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考察调研" target="_blank">河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考…</a>
-                        <span>[2016-08-15]</span>
-                    </li>
-                    <li>
-                        <a href="{:url('detail')}" title="天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企业" target="_blank">天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企…</a>
-                        <span>[2016-08-14]</span>
-                    </li>
-                    <li>
-                        <a href="{:url('detail')}" title="我校组织开展实验室安全大检查" target="_blank">我校组织开展实验室安全大检查</a>
-                        <span>[2016-08-12]</span>
-                    </li>
-                    <li>
-                        <a href="{:url('detail')}" title="任丘市领导来我校考察调研" target="_blank">任丘市领导来我校考察调研</a>
-                        <span>[2016-08-08]</span>
-                    </li>
-                </ul>
+                <div>
+                    <h2 class="indent-1">产品列表</h2>
+                </div>
+                <div class="container_12">
+                    <div class="grid_2">
+                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
+                        <p>产品介绍详情</p>
+                    </div>
+                    <div class="grid_2">
+                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
+                        <p>产品介绍详情</p>
+                    </div>
+                    <div class="grid_2">
+                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
+                        <p>产品介绍详情</p>
+                    </div>
+                   
+                </div>
             </div>
         </div>
     </div>
