--- a/application/home/view/systemset/index.html
+++ b/application/home/view/systemset/index.html
@@ -1,4 +1,5 @@
-{extend name="index" /} {block name="body"}
+{extend name="index" /}
+{block name="body"}
 <div class="container">
     <div class="row">
         <div class="col-md-1">
