新增  后台  用户管理  界面

--- a/application/home/view/nav.html
+++ b/application/home/view/nav.html
@@ -36,7 +36,11 @@
                     <a href="{:url('Index/index')}"><i class="fa fa-dashboard fa-fw"></i> 首页</a>
                 </li>
                 <li>
-                    <a href="{:url('Usermanage/index')}"><i class="fa fa-group"></i> 用户管理</span></a>
+                    <a href="{:url('Usermanage/index')}"><i class="fa fa-group"></i> 客户管理</span></a>
+                    <!-- /.nav-second-level -->
+                </li>
+                <li>
+                    <a href="{:url('User/index')}"><i class="fa fa-group"></i> 用户管理</span></a>
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
