登录与注销与个人中心

--- a/application/home/view/login/index.html
+++ b/application/home/view/login/index.html
@@ -58,7 +58,7 @@ padding-bottom: 20px;">新闻产品公司</h3>
                 document.write(new Date().getFullYear());
                 </script>&nbsp;
                 <br />
-                <span style="color:#888">技术支持： 汤振杰</span>
+                <span style="color:#888">技术支持： 梦云智</span>
             </div>
         </div>
     </div>
