--- a/application/home/view/personal/index.html
+++ b/application/home/view/personal/index.html
@@ -7,33 +7,45 @@
         <div class="col-md-7">
             <form class="form-horizontal" action="{:url('edit')}" method="post">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Name" value="{$User->name}" name="name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Username" value="{$User->username}" name="username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email" value="{$User->email}" name="email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password"  value="{$User->password}" name="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-2 control-label">新密码</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" value="{$User->password}" name="newpassword">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-2 control-label">确认密码</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" value="{$User->password}" name="repassword">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">上次登录</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="LastTimeOn">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="LastTimeOn" name="lasttimeon" value="{$User->last_time_on}">
                     </div>
                 </div>
                 <div class="form-group">
