修改文章管理 类别管理  分页 搜索

--- a/application/home/view/Article/index.html
+++ b/application/home/view/Article/index.html
@@ -4,11 +4,11 @@
     <div class="row-fluid">
         <div class="col-md-1"></div>
         <div class="col-md-10">
-            <form action="" method="post">
+            <form action="" method="get">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="input-group custom-search-form">
-                            <input class="form-control" name="title" placeholder="标题..." type="text" value="{:input('post.title')}" />
+                            <input class="form-control" name="title" placeholder="标题..." type="text" value="{:input('get.title')}" />
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="submit">
                                     <i class="fa fa-search"></i>
