--- a/application/home/view/User/add.html
+++ b/application/home/view/User/add.html
@@ -9,13 +9,13 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Name">
                     </div>
                 </div>
                 <div class="form-group">
